--- a/gameSource/languages/English.txt
+++ b/gameSource/languages/English.txt
@@ -44,7 +44,7 @@ username "USERNAME:"
 atSignTip "INSERT '@' SIGN (INTL KEYBOARDS)"
 
 
-loginButton "LOGIN"
+loginButton "BE BORN"
 friendsButton "FRIENDS"
 familyTrees "FAMILY TREES"
 techTree "TECH"
